--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
         <h1>Find your Match</h1>
         <p class="lead">View your matches, sign up here!</p>
         <div class="text-center">
-            <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
+            <button (click)="registerToggle()" class="btn bg-dark btn-lg mr-2">Register</button>
             <button class="btn btn-info btn-lg">Learn More</button>
         </div>
     </div>
