--- a/client/src/app/Errors/not-found/not-found.component.html
+++ b/client/src/app/Errors/not-found/not-found.component.html
@@ -1,4 +1,5 @@
 <div class="container">
     <h1>Not Found</h1>
-    <button class="btn btn-info btn-lg" routerLink="/">Home</button>
+    <button class="btn btn-info btn-lg" routerLink="/" *ngIf="!loggedIn()">Home</button>
+    <button class="btn btn-info btn-lg" routerLink="/members" *ngIf="loggedIn()">Back to Matches</button>
 </div>
