--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -43,11 +43,11 @@
                 <p>{{member.interests}}</p>
             </tab>
             <tab heading='Photos'>
+                <h4>Photos</h4>
                 <ngx-gallery
                 [options]='galleryOptions'
                 [images]='galleryImages'
                 style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
-                <p>photos</p>
             </tab>
             <tab heading='Messages'>
                 <h4>Messages will go here</h4>
