--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,22 +1,51 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
-    <h1 class="text-center text-primary">Sign Up</h1>
-    <hr>
-    <div class="form-group">
-        <input type="text" 
-            class="form-control"
-            name="username"
-            [(ngModel)]="model.username"
-            placeholder="Username">
-    </div>
-    <div class="form-group">
-        <input type="password" 
-            class="form-control"
-            name="password"
-            [(ngModel)]="model.password"
-            placeholder="Password">
-    </div>
-    <div class="form-group text-center">
-        <button class="btn btn-success mr-2" type="sublit">Register</button>
-        <button class="btn btn-default mr-2" (click)="cancel()">Cancel</button>
-    </div>
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
+  <h1 class="text-center text-primary">Sign Up</h1>
+  <hr>
+  <div class="form-group">
+    <label class="control-label" style="margin-right: 10px">Gender:</label>
+    <label class="radio-inline">
+      <input type="radio" value="male" formControlName="gender"> Male
+    </label>
+    <label class="radio-inline">
+      <input type="radio" value="female" formControlName="gender" class="ml-3"> Female
+    </label>
+    <label class="radio-inline">
+      <input type="radio" value="other" formControlName="gender" class="ml-3"> Other
+    </label>
+  </div>
+  <app-text-input
+    [formControl]="registerForm.controls['username']"
+    [label]="'Username'" ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['knownAs']"
+    [label]="'Known As'" ></app-text-input>
+  <app-date-input
+    [formControl]="registerForm.controls['dateOfBirth']"
+    [label]="'Date of Birth'" [maxDate]="maxDate" ></app-date-input>
+  <app-text-input
+    [formControl]="registerForm.controls['city']"
+    [label]="'City'" ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['country']"
+    [label]="'Country'" ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['password']"
+    [label]="'Password'"
+    [type]="'password'" ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['confirmPassword']"
+    [label]="'Password Confirmation'"
+    [type]="'password'" ></app-text-input>
+  <div class="form-group text-center">
+    <button class="btn btn-success mr-2" [disabled]="!registerForm.valid" type="sublit">Register</button>
+    <button class="btn btn-default mr-2" (click)="cancel()">Cancel</button>
+  </div>
+
+  <div class="row" *ngIf="validationErrors.length > 0">
+    <ul>
+        <li *ngFor="let error of validationErrors">
+            {{error}}
+        </li>
+    </ul>
+  </div>
 </form>
